# hacklib_gw2

./: Agent.cpp  AttackTarget.cpp  Buff.cpp  CMakeLists.txt  Character.cpp  Compass.cpp  EspDraw.cpp  Gadget.cpp  GameData.cpp  GameData.h  General.cpp  Gw2Hook.cpp  Gw2Hook.h  Player.cpp  README.md  ResourceNode.cpp  SampleApp.cpp  gw2lib.h  main.cpp  main.h
